--- a/web/css/main.css
+++ b/web/css/main.css
@@ -1,12 +1,14 @@
 html {
     height: 100%;
-    font-family: Arial, Helvetica, Verdana, SansSerif;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
     background-color: #c9ffc9;
 }
 
 body {
+    line-height: 1.4;
     padding: 0 20px;
     margin: 0 auto;
+    max-width: 1200px;
     width: 80%;
 }
 
@@ -25,6 +27,10 @@ header {
 
 .photo {
     float: right;
+    height: auto;
+    max-width: 100%;
+    margin-left: 1em;
+    margin-bottom: 1em;
 }
 
 .contact-links {
