Linked expertise page again

--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -17,7 +17,8 @@
                 <ul>
                     <li><a href="/about/">About</a></li>
                     <li><a href="/#services">Services</a></li>
-                    <li><a href="/work/">My work</a></li>
+                    <li><a href="/work/">Work</a></li>
+                    <li><a href="/expertise/">Expertise</a></li>
                     <li><a href="/#contact">Contact</a></li>
                 </ul>
             </nav>
