--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -6,6 +6,7 @@
         <title>
             Lucas van Lierop, freelance software engineer #php #symfony #docker
         </title>
+        <link rel="shortcut icon" href="favicon.ico">
         <link rel="stylesheet" href="css/normalize.css"/>
         <link rel="stylesheet" href="css/main.css"/>
         <link rel="stylesheet" href="css/palette.css"/>
