Moved contact to a separate page

--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -20,7 +20,7 @@
                     <li><a href="/#services">Services</a></li>
                     <li><a href="/work/">Work</a></li>
                     <li><a href="/expertise/">Expertise</a></li>
-                    <li><a href="/#contact">Contact</a></li>
+                    <li><a href="/contact/">Contact</a></li>
                 </ul>
             </nav>
 
