--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,3 +1,5 @@
+@import "modules/_colors";
+
 html {
     height: 100%;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
