Added basic footer

--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -29,6 +29,31 @@
         {% block content %}
         {{ page.content }}
         {% endblock %}
+
+        <footer>
+            <p>
+                <strong>Lucasvanlierop.nl</strong><br />
+                Alle rechten voorbehouden © 2016
+            </p>
+            <ul class="contact-links">
+                <li>
+                    <a href="tel:+31653593790">
+                        <i class="fa fa-phone" style="color:#25d366" title="Phone / Signal"></i>
+                        +31653593790
+                    </a>
+                </li>
+                <li>
+                    <a href="mailto:me@lucasvanlierop.nl">
+                        <i class="fa fa-envelope-open" title="Mail"></i>
+                        me@lucasvanlierop.nl</a>
+                </li>
+                <li>
+                    <a href="https://twitter.com/lucasvanlierop">
+                        <i class="fa fa-twitter" style="color:#00aced" title="Twitter"></i> @lucasvanlierop
+                    </a>
+                </li>
+            </ul>
+        </footer>
     </body>
 </html>
 
