--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -76,7 +76,7 @@ nav a {
     color: white;
 }
 
-section, header {
+section, header, footer {
     padding: 20px 20%;
     clear: both;
     border-bottom: solid 1px white;
@@ -153,5 +153,4 @@ a.button {
 
 footer {
     background-color: #dddddd;
-    padding: 20px;
 }
