--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -32,7 +32,7 @@
         <footer>
             <p>
                 <strong>Lucasvanlierop.nl</strong><br />
-                Alle rechten voorbehouden © 2016
+                All rights reserved © 2016
             </p>
             <ul class="contact-links">
                 <li>
