Setted a separate title for each page

--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -4,7 +4,7 @@
         <base href="/">
         <meta charset="UTF-8">
         <title>
-            Lucas van Lierop, freelance software engineer #php #symfony #docker
+            {{ page.name }}
         </title>
         <link rel="shortcut icon" href="favicon.ico">
         <link rel="stylesheet" href="css/normalize.css"/>
