Added site language and description

--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <base href="/">
         <meta charset="UTF-8">
         <title>
             {{ page.name }}
         </title>
+        <meta name="description" content="Lucas van Lierop is a freelance software engineer who is specialized in creating, refactoring or containerizing (web) applications" />
         <link rel="shortcut icon" href="favicon.ico">
         <link rel="stylesheet" href="css/normalize.css"/>
         <link rel="stylesheet" href="css/main.css"/>
