Keep title on first frontpage section for now since it breaks html validation but don't display it

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -86,6 +86,10 @@ section h2 {
     text-transform: uppercase;
 }
 
+.about-me h2 {
+    display: none;
+}
+
 a.button {
     font-size: 200%;
     font-weight: bold;
