--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -169,6 +169,12 @@ footer {
     background-color: #ddd;
 }
 
+abbr[title] {
+    cursor: help;
+    border-bottom: 1px dashed $palette-grey;
+    text-decoration: none;
+}
+
 @media screen and (min-width: 640px) {
     section, header, footer {
         padding: 20px 20%;
@@ -203,5 +209,14 @@ footer {
                 }
             }
         }
+    }
+    abbr[title] {
+        border: none;
+    }
+    abbr[title]:before {
+        content: attr(title) " ("
+    }
+    abbr[title]:after {
+        content: ")"
     }
 }
