--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -51,6 +51,9 @@
                         <i class="fa fa-twitter" style="color:#00aced" title="Twitter"></i> @lucasvanlierop
                     </a>
                 </li>
+                <li>
+                    <i class="fa fa-certificate" style="color:grey" title="Chamber of commerce number"></i> Kvk nr. 67502423
+                </li>
             </ul>
         </footer>
         <script>
