Enable syntax highlighting with Pygments (the reason to switch to Sculpin)

--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -11,6 +11,7 @@
         <link rel="shortcut icon" href="favicon.ico">
         <link rel="stylesheet" href="css/normalize.css"/>
         <link rel="stylesheet" href="css/main.css"/>
+        <link rel="stylesheet" href="css/pygments.css"/>
         <script src="https://use.fontawesome.com/eb213707b3.js"></script>
     </head>
     <body>
