--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -7,7 +7,7 @@
         <title>
             {{ page.name }}
         </title>
-        <meta name="description" content="Lucas van Lierop is a freelance software engineer who is specialized in creating, refactoring or containerizing (web) applications" />
+        <meta name="description" content="Lucas van Lierop is a freelance software developer who is specialized in creating, refactoring or containerizing (web) applications" />
         <link rel="shortcut icon" href="favicon.ico">
         <link rel="stylesheet" href="css/normalize.css"/>
         <link rel="stylesheet" href="css/main.css"/>
@@ -16,7 +16,7 @@
     </head>
     <body>
         <header class="palette-bg-petrol">
-            <a href="/"><h1>Lucas van Lierop<span class="payoff">freelance software engineer</span></h1></a>
+            <a href="/"><h1>Lucas van Lierop<span class="payoff">freelance software developer</span></h1></a>
             <nav>
                 <ul>{% spaceless %}
                     <li><a href="/about/">About</a></li>
