Wrap content in a main element so sections can be used for different things

--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -26,9 +26,13 @@
             </nav>
         </header>
 
+        <main>
+
         {% block content %}
         {{ page.content }}
         {% endblock %}
+
+        </main>
 
         <footer>
             <p>
