--- a/source/scss/main.scss
+++ b/source/scss/main.scss
@@ -76,7 +76,7 @@ nav {
     }
 }
 
-section, header, footer {
+main, header, footer {
     clear: both;
     border-bottom: solid 1px white;
     padding: 10px 20px;
@@ -174,7 +174,7 @@ abbr[title] {
 }
 
 @media screen and (min-width: 640px) {
-    section, header, footer {
+    main, header, footer {
         padding: 20px 20%;
     }
 }
