Format code blocks

--- a/source/scss/main.scss
+++ b/source/scss/main.scss
@@ -218,3 +218,11 @@ abbr[title] {
         content: ")"
     }
 }
+
+figure.code-highlight-figure {
+    margin: 0;
+
+    .highlight {
+        padding: 10px;
+    }
+}
