Add blog to homepage and navigation

--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -22,7 +22,8 @@
                     <li><a href="/about/">About</a></li>
                     <li><a href="/work/">Work</a></li>
                     <li><a href="/expertise/">Expertise</a></li>
-                {% endspaceless %}</ul>
+                    <li><a href="/blog/">Blog</a></li>
+                    {% endspaceless %}</ul>
             </nav>
         </header>
 
