Make sure top header styling does not interfere with other elements

--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -15,7 +15,7 @@
         <script src="https://use.fontawesome.com/eb213707b3.js"></script>
     </head>
     <body>
-        <header class="palette-bg-petrol">
+        <header class="top palette-bg-petrol">
             <a href="/"><h1>Lucas van Lierop<span class="payoff">freelance software developer</span></h1></a>
             <nav>
                 <ul>{% spaceless %}
