Allow blog post template to override default

--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -28,9 +28,10 @@
         </header>
 
         <main>
-
+        {% block content_wrapper %}
         {% block content %}
         {{ page.content }}
+        {% endblock %}
         {% endblock %}
 
         </main>
