This blog ain't big enough for multiple H1's

--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <header class="top palette-bg-petrol">
-            <a href="/"><h1>Lucas van Lierop<span class="payoff">freelance software developer</span></h1></a>
+            <a href="/"><span class="top-title">Lucas van Lierop<span class="payoff">freelance software developer</span></span></a>
             <nav>
                 <ul>{% spaceless %}
                     <li><a href="/about/">About</a></li>
