--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="css/normalize.css"/>
         <link rel="stylesheet" href="css/main.css"/>
         <link rel="stylesheet" href="css/pygments.css"/>
+        <link rel="alternate" type="application/atom+xml" href="{{ site.url }}/atom.xml" title="{{ site.title }} activity feed" />
         <script src="https://use.fontawesome.com/eb213707b3.js"></script>
     </head>
     <body>
