--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -64,6 +64,8 @@
                 </li>
             </ul>
         </footer>
+
+        {% if site.env == 'prod' %}
         <script>
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
                         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -75,6 +77,7 @@
                 ga('send', 'pageview');
             }
         </script>
+        {% endif %}
     </body>
 </html>
 
