--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -5,7 +5,7 @@
     <base href="/">
         <meta charset="UTF-8">
         <title>
-            {{ page.name }}
+            {{ page.name }} {{ page.title }}
         </title>
         <meta name="description" content="Lucas van Lierop is a freelance software developer who is specialized in creating, refactoring or containerizing (web) applications" />
         <link rel="shortcut icon" href="favicon.ico">
